# se3

./: .clang-format  CMakeLists.txt  CMakePresets.json  pyproject.toml
cmake/: FindCPM.cmake
src/robrazo/: CMakeLists.txt
src/robrazo/attitude/: CMakeLists.txt
src/se3/: CMakeLists.txt  __init__.py  generic.hpp  se3_pybind.cpp
src/se3/attitude/: CMakeLists.txt  attitude.py  attitude_group.hpp  mrp.hpp  quaternion.hpp  quaternion_ops.hpp  rotmat.hpp  vector_concepts.hpp  vectors.hpp
src/se3/attitude/generic/: mrp.hpp  quaternion.hpp
src/se3/linear_algebra/: CMakeLists.txt  matmul.hpp  matrices.hpp  matrix_ops.hpp  transpose.hpp  type_traits.hpp  vector_concepts.hpp  vector_ops.hpp  vectors.hpp
src/se3/linear_algebra/arrays/: vectors_arrays.hpp
src/se3/linear_algebra/generic/: matrices_generic.hpp  vectors_generic.hpp
src/se3/linear_algebra/simd/: matgroup_simd.hpp  vectors_simd.hpp
test/: CMakeLists.txt  examples.cpp  matrix_tests.cpp  quaternion_test.cpp  scratch.cpp  vector_concepts_test.cpp  vector_tests.cpp
