include_directories("${CMAKE_PROJECT_SOURCE_DIR}/src")
add_subdirectory(attitude)

nanobind_add_module(
  # Name of the extension
  robrazo_ext

  # Target the stable ABI for Python 3.12+, which reduces
  # the number of binary wheels that must be built. This
  # does nothing on older Python versions
  STABLE_ABI

  # Build libnanobind statically and merge it into the
  # extension (which itself remains a shared library)
  #
  # If your project builds multiple extensions, you can
  # replace this flag by NB_SHARED to conserve space by
  # reusing a shared libnanobind across libraries
  NB_STATIC

  # Source code goes here
  robrazo_pybind.cpp
)